[package]
name = "pgx_s3sign"
version = "1.2.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg17"]
#pg11 = ["pgrx/pg11"]
#pg12 = ["pgrx/pg12"]
#pg13 = ["pgrx/pg13"]
pg14 = ["pgrx/pg14"]
pg15 = ["pgrx/pg15"]
pg16 = ["pgrx/pg16"]
pg17 = ["pgrx/pg17"]
pg_test = []

[dependencies]
pgrx = "0.16.0"
pgrx-macros = "0.16.0"
rust-s3 = "0.22.12"
aws-region = "0.21.0"
aws-creds = "0.22.2"
futures = "0.3.5"

[dev-dependencies]
pgrx-tests = "0.16.0"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
